--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "pdf-lib": "^1.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/express-fileupload": "^1.4.1",
     "@types/node": "^18.16.3",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
