--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
-    "pdf-lib": "^1.17.1"
+    "pdf-lib": "^1.17.1",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.21.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
     "@types/node": "^18.16.3",
+    "@types/qrcode-terminal": "^0.12.0",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
     "prisma": "^4.13.0",
