--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express-fileupload": "^1.4.0",
     "pdf-lib": "^1.17.1",
     "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.7.1",
     "whatsapp-web.js": "^1.21.0"
   },
   "devDependencies": {
