--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^4.13.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/nodemailer": "^6.4.9",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -31,6 +32,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "nodemailer": "^6.9.4",
     "pdf-lib": "^1.17.1",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.7.1",
